<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListFragment"
    android:background="@color/slate_green">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_score_keeper"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/average_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:textColor="@color/black"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="62dp"
        />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_game"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/gray"
        />

</FrameLayout>